[Tango->FCM] Fix the Drive push messaging.

Drive relies on DeprecatedProfileInvalidationProviderFactory for its invalidations.
ProfileSyncService only calls SetActiveAccountId on the IdentityProvider
from the ProfileInvalidationProvider implementation it uses.

If FCMInvalidations is enabled, the IdentityProvider used by
DeprecatedProfileInvalidationProviderFactory is never initialized
with the active account ID so never starts.

ProfileSyncService should call SetActiveAccountId on both IdentityProvider
instances as long as DeprecatedProfileInvalidationProviderFactory is used.

Bug: 897570
Change-Id: I5d452a7aa4e0d3fb8496a213495eafef9e5a0351
Reviewed-on: https://chromium-review.googlesource.com/c/1296494
Commit-Queue: Tatiana Gornak <melandory@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Reviewed-by: John Wu <jzw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603328}
Former-commit-id: e0e4c2bd0d3be3166c55832cb248cb33b2d45fb4