components/browser_sync/profile_sync_service.h
@@ -206,7 +206,8 @@ class ProfileSyncService : public syncer::SyncService,
     identity::IdentityManager* identity_manager;
     SigninScopedDeviceIdCallback signin_scoped_device_id_callback;
     GaiaCookieManagerService* gaia_cookie_manager_service = nullptr;
-    invalidation::IdentityProvider* invalidations_identity_provider = nullptr;
+    std::vector<invalidation::IdentityProvider*>
+        invalidations_identity_providers;
     StartBehavior start_behavior = MANUAL_START;
     syncer::NetworkTimeUpdateCallback network_time_update_callback;
     scoped_refptr<network::SharedURLLoaderFactory> url_loader_factory;
@@ -726,10 +727,11 @@ class ProfileSyncService : public syncer::SyncService,
   // when the user signs out of the content area.
   GaiaCookieManagerService* const gaia_cookie_manager_service_;
 
-  // This provider tells the invalidations code which identity to register for.
+  // This providers tells the invalidations code which identity to register for.
   // The account that it registers for should be the same as the currently
   // syncing account, so we'll need to update this whenever the account changes.
-  invalidation::IdentityProvider* const invalidations_identity_provider_;
+  std::vector<invalidation::IdentityProvider*> const
+      invalidations_identity_providers_;
 
   std::unique_ptr<syncer::LocalDeviceInfoProvider> local_device_;
 
