components/browser_sync/profile_sync_test_util.cc
@@ -268,7 +268,8 @@ ProfileSyncService::InitParams ProfileSyncServiceBundle::CreateBasicInitParams(
   init_params.identity_manager = identity_manager();
   init_params.signin_scoped_device_id_callback =
       base::BindRepeating([]() { return std::string(); });
-  init_params.invalidations_identity_provider = identity_provider_.get();
+  init_params.invalidations_identity_providers.push_back(
+      identity_provider_.get());
   init_params.network_time_update_callback = base::DoNothing();
   init_params.url_loader_factory =
       base::MakeRefCounted<network::WeakWrapperSharedURLLoaderFactory>(
